[package]
name = "baseband"
version = "0.1.0"
edition = "2021"
authors = [ "claudio carraro <carraro.claudio@gmail.com>" ]

repository = "https://github.com/in3hkf/baseband"

description = "Baseband is a discrete-time signals and systems processor"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
